packages/rocketchat-theme/client/imports/general/base_old.css
/* ... */
/* FLEX-TAB and FLEX-TAB views */
.rc-old .main-content-flex {
	display: flex;
	height: 100%;
}

.rc-old .flex-tab-container {
	display: flex;
	flex: 0 0 41px;
	z-index: 2;
	border-width: 0 0 0 1px;

	& .flex-tab {
		position: relative;
		display: none;
		width: var(--flex-tab-width);
		overflow-x: visible;

		& .control {
			& .header {
				text-align: center;
				padding: 5px 30px 20px;
				margin: 5px 0 15px;

				& h2 {
					font-size: 20px;
					line-height: 25px;
					font-weight: 300;
				}
			}

			& .button {
				min-height: 36px;
				margin: 0 1px;
			}

			& .more {
				position: absolute;
				left: 0;
				top: 0;
				height: 60px;
				width: 30px;
				border-width: 0 0 1px;
				cursor: pointer;
				transform: translateX(-27px);
				transition: transform 0.25s ease-out 0.475s, background 0.075s ease-out 0.5s;

				& i {
					transform-origin: 50%, 50%, 0;
					transition: transform 0.3s ease-out;
					height: 12.5px;
					vertical-align: top;
					margin-top: 1px;
				}
			}

			& .search-form {
				width: 100%;

				& .icon-plus {
					position: absolute;
					top: 11px;
					left: 8px;
					font-size: 13px;
				}
			}

			& .info-tabs {
				position: absolute;
				top: 0;
				text-align: right;
				height: 60px;
				right: 20px;

				& a {
					float: left;
					display: inline-block;
					padding: 0 15px;
					height: 60px;
					line-height: 60px;
					vertical-align: middle;
					border-width: 0 0 0 1px;

					&:last-child {
						border-width: 0 1px 0 0;
					}
				}
			}
		}

		& .content {
			overflow-x: hidden;
			overflow-y: auto;
			top: auto;
			-webkit-overflow-scrolling: touch;
			position: absolute;
			width: 100%;
			height: 100%;
			left: 0;

			& > div {
				transition: transform 0.45s cubic-bezier(0.5, 0, 0, 1), opacity 0.125s ease-out 0.1s;
			}

			& > .animated-hidden {
				transform: translateX(100%);
				opacity: 0;
			}

			& > .animated {
				position: absolute;
				top: 0;
				left: 0;
				width: 100%;
				height: 100%;
			}

			& > .title {
				height: var(--header-min-height);

				& h2 {
					padding: 0 20px;
					font-size: 20px;
					line-height: var(--header-min-height);
					font-weight: 300;
				}
			}
		}

		& footer {
			position: absolute;
			bottom: 0;
			left: 0;
			width: 100%;
			padding: 9px 15px 0;
			z-index: 100;
			text-align: right;
			height: var(--footer-min-height);
		}

		& .social {
			text-align: center;

			& h4 {
				font-weight: 300;
				position: absolute;
				width: 100%;
				top: -12px;
				left: 0;
				font-size: 13px;
			}

			& .share {
				border-radius: 50%;
				min-height: 40px;
				line-height: 20px;

				&::before {
					border-radius: 50%;
				}

				& span {
					display: none;
				}
			}
		}

		& .close-flex-tab {
			position: absolute;
			text-align: center;
			top: 3px;
			right: 5px;
			z-index: 20;
			width: 30px;
			height: 30px;

			& span {
				display: inline-block;
				width: 21px;
				height: 20px;
				border-radius: 50%;

				& i {
					display: inline-block;
					height: 18px;
					width: 18px;
					border-width: 1px;
					border-style: solid;
					border-radius: 50%;
					font-size: 10px;
				}
			}
		}
	}

	& .flex-tab-bar {
		min-width: 40px;
		z-index: 1;

		& .tab-button {
			position: relative;
			cursor: pointer;
			text-align: center;

			& button {
				height: 38px;
			}

			& .counter {
				position: absolute;
				font-size: 9px;
				width: 13px;
				height: 13px;
				border-radius: 50%;
				line-height: 13px;
				font-weight: bold;
				right: 4px;
				top: 4px;
				text-align: center;
			}

			&.active {
				border-width: 0 3px 0 0;

				& button {
					margin-left: 3px;
				}

				& .counter {
					margin-right: -3px;
				}
			}
		}
	}

	&.opened .flex-tab {
		display: block;
	}
}

.rc-old .list-view {
	-webkit-overflow-scrolling: touch;
	overflow-y: auto;
	overflow-x: hidden;
	z-index: 10;
	padding: 20px;

	& .list {
		display: flex;
		flex-flow: column nowrap;
		position: relative;
		width: 100%;

		& .message {
			padding: 8px 0 4px 50px;
		}
	}

	& > .title {
		margin: 0 0 20px;

		& h2 {
			font-size: 20px;
			line-height: 25px;
			font-weight: 300;
		}

		& p {
			font-size: 12px;
			margin-top: 4px;
		}

		& b {
			font-weight: 600;
		}

		& .see-all {
			float: right;
			border-width: 0;
			text-decoration: underline;
			cursor: pointer;

			&:hover {
				text-decoration: none;
			}
		}
	}

	& .show-more-users {
		margin: 1em auto 0;
		display: block;
	}

	&.uploaded-files-list {
		& a .file-name {
			color: #008ce3;
			padding: 10px 5px;
			border-bottom: 1px solid #eaeaea;
			display: block;
			border-width: 0 0 1px;

			&:hover {
				color: #006db0;
				text-decoration: underline;
			}

			& p {
				overflow: hidden;
				text-overflow: ellipsis;
				white-space: nowrap;
			}
		}

		& i {
			float: left;
			margin-right: 10px;

			&.file-delete {
				float: right;
				padding-top: 10px;
			}

			&.file-download {
				float: right;
				padding-top: 11px;
			}
		}
	}
}
/* ... */

